litmask/tests/compile/mask_file_with_args.stderr
error: mask_file! takes no arguments
 --> tests/compile/mask_file_with_args.rs:6:21
  |
6 |     let _: String = mask_file!(42);
  |                     ^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `mask_file` (in Nightly builds, run with -Z macro-backtrace for more info)
